--- a/app/src/main/res/layout/activity_my_page_edit.xml
+++ b/app/src/main/res/layout/activity_my_page_edit.xml
@@ -24,6 +24,7 @@
 
         <TextView
             android:id="@+id/back"
+            android:clickable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="back"
