--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="very_light_pink">#f2f2f2</color>
     <color name="very_light_pink_70">#b3f2f2f2</color>
 
+    <color name="setting_text">#707074</color>
     <color name="white">#fff</color>
 </resources>
