--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/login_bg"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
@@ -14,7 +15,7 @@
         android:textStyle="bold"
         android:layout_marginStart="@dimen/mai_margin_16"
         android:text="@string/mogakgong_ko"
-        android:textColor="@color/dark_grey"
+        android:textColor="@color/white"
         android:textSize="@dimen/text_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/main_margin_8"
         android:text="@string/mogakgong"
-        android:textColor="@color/dark_grey"
+        android:textColor="@color/white"
         android:textSize="@dimen/text_24"
         app:layout_constraintStart_toStartOf="@+id/mogackgong_ko_text"
         app:layout_constraintTop_toBottomOf="@+id/mogackgong_ko_text" />
