feat: edit ranking fragment
- 더미데이터 추가
- 리사이클러뷰 다 안보이는 버그 수정

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/mai_margin_10"
-        android:background="@drawable/ic_circle_6"
+        android:background="@drawable/round_6"
         android:backgroundTint="@color/kakao"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@id/facebook_login_layout"
@@ -64,7 +64,7 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/loginBtnHeight"
         android:layout_marginBottom="@dimen/mai_margin_10"
-        android:background="@drawable/ic_circle_6"
+        android:background="@drawable/round_6"
         android:backgroundTint="@color/fecebook"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@id/guest_login_btn"
@@ -95,7 +95,7 @@
         android:layout_marginStart="@dimen/loginBtnMarginRow"
         android:layout_marginEnd="@dimen/loginBtnMarginRow"
         android:layout_marginBottom="115dp"
-        android:background="@drawable/ic_circle_6"
+        android:background="@drawable/round_6"
         android:backgroundTint="@color/light_blue_grey"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
