--- a/app/src/main/res/layout/ranking_fragment.xml
+++ b/app/src/main/res/layout/ranking_fragment.xml
@@ -9,8 +9,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp">
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/title"
@@ -46,7 +47,8 @@
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tabLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
