--- a/app/src/main/res/layout/ranking_item.xml
+++ b/app/src/main/res/layout/ranking_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <import type="com.mashup.dionysos.Util" />
 
         <variable
             name="ranking"
@@ -35,6 +36,8 @@
             android:layout_height="40dp"
             android:layout_marginStart="64dp"
             android:src="@drawable/ic_profile"
+            android:bind_url="@{ranking.profileUrl}"
+            android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -55,12 +58,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="@{String.valueOf(ranking.time)}"
+            android:text="@{Util.getTime(ranking.time)}"
             android:textColor="@{ranking.isMine ? @color/white : @color/dark_grey}"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="@id/nickname"
             app:layout_constraintTop_toBottomOf="@id/nickname" />
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
