--- a/app/src/main/res/layout/ranking_page_fragment.xml
+++ b/app/src/main/res/layout/ranking_page_fragment.xml
@@ -11,7 +11,7 @@
         android:id="@+id/firstProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:src="@drawable/ic_profile_76dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +31,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:text="원숭이"
+        android:textColor="@color/dark_grey"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/firstProfile"
         app:layout_constraintStart_toStartOf="@id/firstProfile"
         app:layout_constraintTop_toBottomOf="@id/firstProfile" />
@@ -39,6 +42,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="00:00:00"
+        android:textColor="@color/dark_grey"
+        android:textSize="12sp"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="@id/firstProfile"
         app:layout_constraintStart_toStartOf="@id/firstProfile"
         app:layout_constraintTop_toBottomOf="@id/firstName" />
@@ -68,6 +76,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:text="원숭이"
+        android:textColor="@color/dark_grey"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/secondProfile"
         app:layout_constraintStart_toStartOf="@id/secondProfile"
         app:layout_constraintTop_toBottomOf="@id/secondProfile" />
@@ -77,6 +88,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="00:00:00"
+        android:textColor="@color/dark_grey"
+
         app:layout_constraintEnd_toEndOf="@id/secondProfile"
         app:layout_constraintStart_toStartOf="@id/secondProfile"
         app:layout_constraintTop_toBottomOf="@id/secondName" />
@@ -106,15 +121,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:text="원숭이"
+        android:textColor="@color/dark_grey"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/thirdProfile"
         app:layout_constraintStart_toStartOf="@id/thirdProfile"
         app:layout_constraintTop_toBottomOf="@id/thirdProfile" />
 
     <TextView
+        android:fontFamily="sans-serif-medium"
         android:id="@+id/thirdTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:text="00:00:00"
+        android:textColor="@color/dark_grey"
         app:layout_constraintEnd_toEndOf="@id/thirdProfile"
         app:layout_constraintStart_toStartOf="@id/thirdProfile"
         app:layout_constraintTop_toBottomOf="@id/thirdName" />
@@ -129,7 +150,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="22dp"
         android:layout_marginEnd="16dp"
@@ -137,6 +158,7 @@
         android:clipToPadding="false"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/barrier" />
 
 
