--- a/app/src/main/res/layout/bottom_sheet_timelaps.xml
+++ b/app/src/main/res/layout/bottom_sheet_timelaps.xml
@@ -4,7 +4,7 @@
 
     <data>
 
-        <import type="com.mashup.dionysos.ui.main.TimeViewModel.SelectTimeLapse" />
+        <import type="com.mashup.dionysos.ui.main.TimeViewModel.SelectBottomSheet" />
         <variable
             name="timeVM"
             type="com.mashup.dionysos.ui.main.TimeViewModel" />
@@ -50,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:onClick="@{()->timeVM.onClickSelectTimeLapse(SelectTimeLapse.NOPE)}"
+                    android:onClick="@{()->timeVM.onClickSelectTimeLapse(SelectBottomSheet.NOPE)}"
                     android:src="@drawable/ic_btn_no"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -61,7 +61,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginStart="@dimen/mai_margin_10"
-                    android:onClick="@{()->timeVM.onClickSelectTimeLapse(SelectTimeLapse.YEAH)}"
+                    android:onClick="@{()->timeVM.onClickSelectTimeLapse(SelectBottomSheet.YEAH)}"
                     android:src="@drawable/ic_btn_yes"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
