--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,6 @@
     <dimen name="loginBtnHeight">44dp</dimen>
     <dimen name="loginBtnMarginRow">30dp</dimen>
     <dimen name="loginBtnText">19sp</dimen>
+    <dimen name="bottom_sheet_detail_text_margin_top">10dp</dimen>
+    <dimen name="bottom_sheet_title_margin_top">32dp</dimen>
 </resources>
