--- a/app/src/main/res/layout/bottom_sheet_timelaps.xml
+++ b/app/src/main/res/layout/bottom_sheet_timelaps.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
-        <import type="com.mashup.dionysos.ui.main.TimeViewModel.SelectBottomSheet" />
+        <import type="com.mashup.dionysos.base.viewmodel.BaseViewModel.SelectBottomSheet" />
         <variable
             name="timeVM"
             type="com.mashup.dionysos.ui.main.TimeViewModel" />
@@ -22,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/mai_margin_32"
+                android:layout_marginTop="@dimen/bottom_sheet_title_margin_top"
                 android:text="@string/use_timeaps"
                 android:textColor="@color/dark_grey"
                 android:textSize="24sp"
@@ -32,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginStart="@dimen/main_margin_8"
+                android:layout_marginTop="@dimen/bottom_sheet_detail_text_margin_top"
                 android:text="@string/use_timeaps_study"
                 android:textColor="@color/dark_grey"
                 android:textSize="15sp" />
