로그인로직 디자인 수정 반영

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,34 +2,37 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_bg"
+    android:background="@drawable/ic_sign_in_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
+        style="@style/H2"
         android:id="@+id/mogackgong_ko_text"
         android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="@dimen/login_title_margin_top"
         android:lineSpacingExtra="12sp"
-        android:textStyle="bold"
+        android:fontFamily="sans-serif-black"
         android:layout_marginStart="@dimen/mai_margin_16"
+        android:textColor="@color/basic_black"
         android:text="@string/mogakgong_ko"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_24"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:lineSpacingExtra="12sp"
-        android:textStyle="bold"
         android:id="@+id/mogackgong_en_text"
+        style="@style/H2En"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/main_margin_8"
+        android:layout_marginTop="11dp"
+        android:lineSpacingExtra="12sp"
         android:text="@string/mogakgong"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_24"
+        android:textColor="@color/basic_black"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/mogackgong_ko_text"
         app:layout_constraintStart_toStartOf="@+id/mogackgong_ko_text"
         app:layout_constraintTop_toBottomOf="@+id/mogackgong_ko_text" />
 
@@ -37,13 +40,13 @@
         android:id="@+id/kakao_login_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/mai_margin_10"
         android:background="@drawable/round_6"
         android:backgroundTint="@color/kakao"
         android:orientation="vertical"
+        android:layout_marginBottom="@dimen/login_btn_margin_top"
+        app:layout_constraintStart_toStartOf="@id/guest_login_btn"
         app:layout_constraintBottom_toTopOf="@id/facebook_login_layout"
-        app:layout_constraintEnd_toEndOf="@id/guest_login_btn"
-        app:layout_constraintStart_toStartOf="@id/guest_login_btn">
+        app:layout_constraintEnd_toEndOf="@id/guest_login_btn">
 
         <TextView
             android:layout_width="wrap_content"
@@ -56,17 +59,19 @@
             android:lineSpacingExtra="5sp"
             android:text="Sign in with Kakao"
             android:textColor="@color/white"
-            android:textSize="@dimen/loginBtnText" />
+            android:textSize="@dimen/login_btn_text" />
     </LinearLayout>
 
     <LinearLayout
+
+        app:layout_constraintVertical_chainStyle="packed"
         android:id="@+id/facebook_login_layout"
         android:layout_width="0dp"
         android:layout_height="@dimen/loginBtnHeight"
-        android:layout_marginBottom="@dimen/mai_margin_10"
         android:background="@drawable/round_6"
         android:backgroundTint="@color/fecebook"
         android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/guest_login_btn"
         app:layout_constraintEnd_toEndOf="@id/guest_login_btn"
         app:layout_constraintStart_toStartOf="@id/guest_login_btn">
@@ -76,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="9dp"
             android:backgroundTint="@color/fecebook"
             android:drawableStart="@drawable/ic_facebook"
             android:drawablePadding="6dp"
@@ -84,7 +89,7 @@
             android:letterSpacing="0.02"
             android:lineSpacingExtra="5sp"
             android:textColor="@color/white"
-            android:textSize="@dimen/loginBtnText" />
+            android:textSize="@dimen/login_btn_text" />
 
     </LinearLayout>
 
@@ -94,11 +99,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/loginBtnMarginRow"
         android:layout_marginEnd="@dimen/loginBtnMarginRow"
-        android:layout_marginBottom="115dp"
+        android:layout_marginTop="@dimen/login_btn_margin_top"
         android:background="@drawable/round_6"
-        android:backgroundTint="@color/light_blue_grey"
+        android:backgroundTint="@color/white"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/facebook_login_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -108,12 +114,13 @@
             android:layout_gravity="center"
             android:drawableStart="@drawable/ic_guest"
             android:drawablePadding="6dp"
+            android:drawableTint="@color/basic_grey_2"
             android:gravity="center"
             android:letterSpacing="0.02"
             android:lineSpacingExtra="5sp"
             android:text="Sign in with Guest"
-            android:textColor="@color/white"
-            android:textSize="@dimen/loginBtnText" />
+            android:textColor="@color/basic_grey_2"
+            android:textSize="@dimen/login_btn_text" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
