--- a/app/src/main/res/layout/activity_welcom.xml
+++ b/app/src/main/res/layout/activity_welcom.xml
@@ -6,19 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.login.WelcomActivity">
 
-
-
     <ImageView
         android:id="@+id/gif_img"
+        android:src="@drawable/ic_sign_in_background"
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
     <TextView
-
         android:id="@+id/welcom_title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +23,7 @@
         android:text="@string/welcom_title"
         android:textStyle="bold"
         android:textColor="@color/dark_grey"
-        android:textSize="@dimen/text_24"
+        style="@style/H2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
