--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,4 +36,83 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="GiantEn">
+        <item name="android:textSize">72sp</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Giant">
+        <item name="android:textSize">70sp</item>
+    </style>
+
+    <style name="H1">
+        <item name="android:textSize">40sp</item>
+    </style>
+
+    <style name="H1En">
+        <item name="android:textSize">40sp</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="H2">
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="H2En">
+        <item name="android:textSize">24sp</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Sub1">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Sub1En">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Body1">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Body1En">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Sub2">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Sub2En">
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Body2">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Body2En">
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Body3">
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="Body3En">
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">normal</item>
+    </style>
 </resources>
