--- a/app/src/main/res/layout/item_total_time.xml
+++ b/app/src/main/res/layout/item_total_time.xml
@@ -31,7 +31,7 @@
             android:id="@+id/tvTodayTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{Util.getTime(timeVM.timeDataModel.totalTime)}"
+            android:text="@{Util.getTime(timeVM.timeData.totalTime)}"
             android:textColor="@color/dark_grey"
             android:textSize="24sp"
             android:textStyle="bold"
