fix: time model 초기화

--- a/app/src/main/res/layout/fragment_time_control.xml
+++ b/app/src/main/res/layout/fragment_time_control.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/tvTimerHours"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@{timeVM.getTextColor(timeVM.timeData.textColorChange)}"
+                android:textColor="@{timeVM.getTextColor(timeVM.timeData.timeOver)}"
                 android:text_line="@{Util.getTimeH(timeVM.controlTime)}"
                 android:textSize="65sp"
                 android:textStyle="bold"
@@ -52,7 +52,7 @@
                 android:id="@+id/tvTimerMinSec"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@{timeVM.getTextColor(timeVM.timeData.textColorChange)}"
+                android:textColor="@{timeVM.getTextColor(timeVM.timeData.timeOver)}"
                 android:text_line="@{Util.getTimeMS(timeVM.controlTime)}"
                 android:textSize="65sp"
                 android:textStyle="bold"
