feat: main add time history api

--- a/app/src/main/res/layout/timelapse_camera_fragment.xml
+++ b/app/src/main/res/layout/timelapse_camera_fragment.xml
@@ -32,7 +32,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
             android:text="@{Util.getTime(timeLapseVM.controlTime)}"
-            android:textColor="@color/dark_grey"
+            android:fontFamily="sans-serif-black"
+            android:textColor="@color/white"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
