--- a/app/src/main/res/layout/timelapse_edit_fragment.xml
+++ b/app/src/main/res/layout/timelapse_edit_fragment.xml
@@ -1,26 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <import type="com.mashup.dionysos.Util" />
 
         <variable
             name="timeLapseVM"
             type="com.mashup.dionysos.ui.timelapse.TimeLapseViewModel" />
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/dark_grey"
-        android:orientation="vertical"
+        android:background="@color/white"
         tools:context=".ui.timelapse.TimeLapseActivity">
 
-        <ImageView
-            android:id="@+id/btnPlay"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/icon_app" />
+        <TextView
+            android:id="@+id/tvTodayTimeText"
+            style="@style/Body1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/mai_margin_20"
+            android:fontFamily="sans-serif-black"
+            android:gravity="center"
+            android:text="썸네일을 골라주세요!"
+            android:textColor="@color/basic_black"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toTopOf="@+id/ivTimeLapseCover"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    </LinearLayout>
+
+        <ImageView
+            android:id="@+id/ivTimeLapseCover"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:background="@color/basic_black"
+            android:scaleType="fitCenter"
+            android:src="@drawable/icon_app"
+            app:layout_constraintBottom_toTopOf="@id/rvImageSelect"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvImageSelect"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_marginTop="@dimen/mai_margin_20"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ivTimeLapseCover" />
+
+
+        <ImageView
+            android:id="@+id/ok_btn"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginEnd="@dimen/mai_margin_16"
+            android:layout_marginBottom="@dimen/mai_margin_16"
+            android:src="@drawable/nickname_ok_btn"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
